Fix overflowing topic excerpt pushing vote button
In (very rare) cases where a topic's excerpt is made up of a long string
that doesn't wrap, it could end up pushing the topic voting button to
the right and making it inaccessible. This should fix those cases.

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -166,6 +166,7 @@
 
   max-width: none;
   margin: 0;
+  overflow: hidden;
   font-style: italic;
 
   h1 {
